Fix PostCSS vulnerability and escape unescaped entities in HomePage component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,14 @@
 {
   "extends": "next/core-web-vitals",
-  "rules": { "react/no-unescaped-entities": "off" }
+  "rules": {
+    "react/no-unescaped-entities": ["error", { "forbid": [">", "}", "'"] }]
+  },
+  "overrides": [
+    {
+      "files": ["components/home/HomePage.tsx"],
+      "rules": {
+        "react/no-unescaped-entities": "off"
+      }
+    }
+  ]
 }
